--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@types/jest": "^24.0.0",
         "@types/node": "^12.0.0",
         "@types/react-router": "^5.1.8",
+        "husky": "^4.2.5",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-router-dom": "^5.2.0",
@@ -51,6 +52,21 @@
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-react": "^7.20.5",
         "eslint-plugin-react-hooks": "^4.0.8",
+        "lint-staged": "^10.2.11",
         "prettier": "^2.0.5"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged",
+            "post-commit": "git update-index --again",
+            "pre-push": "npm test"
+        }
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx,md,html,css}": [
+            "eslint --fix"
+        ],
+        "*.{png,jpeg,jpg,gif,svg}": "imagemin-lint-staged",
+        "*.css": "stylelint"
     }
 }
