--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "eslint": "^7.6.0",
     "ts-node-dev": "^1.0.0-pre.56",
@@ -14,6 +15,7 @@
     "knex:migrate": "knex --knexfile knexfile.ts migrate:latest"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.21.2",
     "sqlite3": "^5.0.0"
